maybe fix umi alignment

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -326,6 +326,7 @@
 			bottom: -3px;
 			right: -3px;
 			z-index: 5;
+			text-align: center;
 		}
 		.unread-badge {
 			color: @background-color-umi;
